--- a/contrib/package/lib/make/Makefile.vars
+++ b/contrib/package/lib/make/Makefile.vars
@@ -16,12 +16,12 @@ TDSDIR.src = $(TDSDIR)/source/latex/stex/$(PACKAGE)
 
 # the dependencies
 SOURCES		= $(DTX.sty) $(BIB)
-TEXINPUTS := $(PREFIX)//:/Users/kohlhase/kwarc/doc/macros/fromCTAN/biblatex//:
+TEXINPUTS := $(LIBDIR)//:/Users/kohlhase/kwarc/doc/macros/fromCTAN/biblatex//:
 
 # we assume that all other 
 EXAMPLE.deps = $(filter-out $(EXAMPLE.base:%=%.tex), $(shell ls *.tex))
 
-BINDIR = $(PREFIX)/../bin
+BINDIR = $(LIBDIR)/bin
 FILEDATEPROG    = PERL5LIB=$(BINDIR) $(BINDIR)/filedate
 CHECKSUMPROG    = PERL5LIB=$(BINDIR) $(BINDIR)/checksum
 
